test/corpus/basic.txt
==================
hello world
==================
bit of latex

---

(source_file
	(latex)
)

==================
Add a real command
==================

a bit of	\textit{latex}

---

(source_file
	(latex)
)

==================
rnw signature
==================

a bit of \textit{latex}.

We all know 2 > 1

<<>>=
@

---

(source_file
	(latex)
	(rchunk
		(renv_sig_beg)
		(renv_sig_end)
		(renv_content)
	)
)

==================
rnw signature - with option
==================

a bit of \textit{latex}.

We all know 2 > 1

<<echo=T>>=
@

---

(source_file
	(latex)
	(rchunk
		(renv_sig_beg)
		(renv_sig_options
			(renv_key_pair
				(renv_key)
				(renv_val)
			)
		)
		(renv_sig_end)
		(renv_content)
	)
)

==================
rnw signature - with label
==================

a bit of \textit{latex}.

We all know 2 > 1

<<foo >>=
@

---

(source_file
	(latex)
	(rchunk
		(renv_sig_beg)
		(renv_sig_options
			(renv_label)
		)
		(renv_sig_end)
		(renv_content)
	)
)

==================
rnw signature - with label and option
==================

a bit of \textit{latex}.

We all know 2 > 1

<<foo, results = "asis">>=
@

---

(source_file
	(latex)
	(rchunk
		(renv_sig_beg)
		(renv_sig_options
			(renv_label)
			(renv_key_pair
				(renv_key)
				(renv_val)
			)
		)
		(renv_sig_end)
		(renv_content)
	)
)

==================
rnw signature - with options
==================

a bit of \textit{latex}.

We all know 2 > 1

<<echo = T, results = "asis">>=
@

---

(source_file
	(latex)
	(rchunk
		(renv_sig_beg)
		(renv_sig_options
			(renv_key_pair
				(renv_key)
				(renv_val)
			)
			(renv_key_pair
				(renv_key)
				(renv_val)
			)
		)
		(renv_sig_end)
		(renv_content)
	)
)

==================
rnw signature - with text
==================

a bit of \textit{latex}.

We all know 2 > 1

<<echo = T, results = "asis", fig.height = 4>>=
one <- 1 + 1
@

Back again!

---

(source_file
	(latex)
	(rchunk
		(renv_sig_beg)
		(renv_sig_options
			(renv_key_pair
				(renv_key)
				(renv_val)
			)
			(renv_key_pair
				(renv_key)
				(renv_val)
			)
			(renv_key_pair
				(renv_key)
				(renv_val)
			)
		)
		(renv_sig_end)
		(renv_content)
	)
	(latex)
)

==================
LaTeX comment
==================

% this is a comment

---

(source_file
	(latex
		(latex_comment))
)

==================
LaTeX comment with Sexpr
==================

% \Sexpr{10 + 20}

---

(source_file
	(latex
		(latex_comment))
)

==================
Text followed by comment
==================

some text % a comment

---

(source_file
	(latex
		(latex_comment))
)

==================
Comment at start of file
==================

% just a comment

---

(source_file
	(latex
		(latex_comment))
)
